--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "asdf"
 version = "0.1.0"
 edition = "2024"
 repository = "https://github.com/Frefreak/test-cargo-dist"
+description = "this is just a test project, please ignore"
+homepage = "https://github.com/Frefreak/test-cargo-dist"
 
 [dependencies]
 
