--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -11,6 +11,8 @@ ci = "github"
 installers = ["shell", "npm"]
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
+npm-scope = "@c4r50nz"
+publish-jobs = ["npm"]
 # Path that installers should place binaries in
 install-path = "CARGO_HOME"
 # Whether to install an updater program
