--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -11,7 +11,9 @@ ci = "github"
 installers = ["shell", "npm"]
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
+# A namespace to use when publishing this package to the npm registry
 npm-scope = "@c4r50nz"
+# Publish jobs to run in CI
 publish-jobs = ["npm"]
 # Path that installers should place binaries in
 install-path = "CARGO_HOME"
